--- a/core/menu2.scss
+++ b/core/menu2.scss
@@ -174,13 +174,43 @@ nav {
             position: absolute;
             background: white;
             right: 0;
-            top: 60px;
-            line-height:40px;
+            left:0;
+            top: 0px;
+            line-height:60px;
             width: 100%;
+            border-bottom: 1px solid $line-color;
         }
 
         &:checked ~ .hidden { 
             display: block;
         }
     }   
+
+    .search {
+        text-align: left;
+        .autocomplete {
+            position: absolute; 
+            left:0;
+            width: 100%;
+            height: auto;
+            background-color: #fff; 
+            border: 1px solid #ddd; 
+            border-bottom-width: 4px; 
+            margin-top: 15px;
+            ul { 
+                display: block; 
+                list-style-type: none; 
+                padding:0;
+            }
+            strong { 
+                padding:0;
+                margin:0; 
+            }
+        }
+    }
+}
+@media only screen and (max-width: $menu-collapse) {
+    nav input[type="checkbox"]#navmenu ~ ul li .autocomplete ul li {
+        display: block;
+    }
 }
