first draft / working

--- a/src/index.scss
+++ b/src/index.scss
@@ -64,6 +64,7 @@ $name-code:  'Listing';
 
 // ### Extentions
 @import "./scss/popup";
+@import "./scss/blocks";
 
 // ## Some Personal Settings
 html, body {
