--- a/src/components/sidebar.html
+++ b/src/components/sidebar.html
@@ -5,7 +5,70 @@
 
 <!-- Sidebar Container -->
 <aside class="sidebar blocks">
-  <div><h1>Top 1</h1><p>Some Text</p></div>
-  <div><h1>Top 2</h1><p>Some Text</p></div>
-  <div><h1>Top 3</h1><p>Some Text</p></div>
+  <!-- using tr.oauth to login -->
+  <div>
+    <h1>Login</h1>
+    <div id="login">
+      <button onclick="tr.oauth.login(OAuth,'first_id')">Login</button>
+      <input id="load_oauth_cfg" type="file" style="display: none" onchange="load_cfg_file()" />
+      <button onclick="document.getElementById('load_oauth_cfg').click();">Load Config</button>
+    </div>
+    <div id="loggedin" style="display: none;">
+      <img id="login_user_img" class="circle four">
+      <p id="login_user_name"></p>
+      <p id="login_user_mail"></p>
+      <button onclick="function(){window.location.href = '/';}">Logout</button>
+    </div>
+    <script defer>
+      var OAuth = tr.oauth.init("O365");
+
+      function load_cfg_file() {
+        var File = document.getElementById("load_oauth_cfg").files[0];
+        if (File) {
+          tr.oauth.load_cfg_file(OAuth,File,function(S,D){
+            if(S!=200)
+              tr.popup.error("Loading OAuth Config",D);
+          });
+        }
+      }
+
+      if(tr.oauth.logged_in(OAuth)){
+        document.getElementById("login").style.display = "none";
+        document.getElementById("loggedin").style.display = "block";
+        document.getElementById("login_user_name").innerHTML = OAuth.id.name;
+        document.getElementById("login_user_mail").innerHTML = OAuth.id.email;
+        tr.oauth.get(OAuth,
+          "https://graph.microsoft.com/v1.0/me/photo/$value",
+          "blob",
+          {"Content-Type": "image/jpg"},
+          function (S,D){
+            if (S=="200" && D!=null){
+              const url = window.URL || window.webkitURL;
+              const blobUrl = url.createObjectURL(D);
+              document.getElementById("login_user_img").setAttribute("src", blobUrl);
+            }
+          });
+      }
+    </script>
+  </div>
+
+  <!-- additional empty fields -->
+  <div>
+    <h1>Info</h1>
+    <p>Multiple Elements can be added in this sidebar.</p>
+  </div>
+  <div>
+    <h1>Universal Server</h1>
+    <p>Joe Armstrong's best piece of code:</p>
+    <pre><code>universal_server() ->
+    receive
+       {become, F} ->
+           F()
+    end.</code></pre>
+  </div>
 </aside>
+
+<!-- Script inside component -->
+<script defer>
+  console.log("sidebar ...");
+</script>
