--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -65,6 +65,7 @@ button, input[type=submit], input[type=cancel], a.button {
     min-width: 50px;
     padding: 10px 5px;
     margin: 5px;
+    border: none;
 
     &:hover {
         background-color: darken( $color2, 10% ) !important;
