--- a/src/scss/typo.scss
+++ b/src/scss/typo.scss
@@ -68,7 +68,12 @@ header:after,
 
 // ### Header
 // global settings
-h1,h2,h3,h4,h5,h6 {font-family: $font1; }
+h1,h2,h3,h4,h5,h6 {
+  font-family: $font1;
+  &:first-child {
+    margin-top: 5px;
+  }
+}
 
 // special settings
 h1{ font-size: 2.0*$font-size; line-height: 2.6*$font-size; color: $color2; font-weight: lighter; margin: 30px 0 10px 0; padding-bottom: 5px; border-bottom: 1px solid $color2;  }
