fixed several table functions

--- a/src/components/sidebar.html
+++ b/src/components/sidebar.html
@@ -17,7 +17,7 @@
       <img id="login_user_img" class="circle four">
       <p id="login_user_name"></p>
       <p id="login_user_mail"></p>
-      <button onclick="function(){window.location.href = '/';}">Logout</button>
+      <button onclick="window.location.href = '/';">Logout</button>
     </div>
     <script defer>
       var OAuth = tr.oauth.init("O365");
