Changed license to no German use

--- a/src/components/sidebar.html
+++ b/src/components/sidebar.html
@@ -18,7 +18,7 @@
       <p id="login_user_name"></p>
       <p id="login_user_mail"></p>
       <button onclick="tr.net.refresh(OAuth);">Refresh</button>
-      <button onclick="window.location.href = '/';">Logout</button>
+      <button onclick="tr.net.logout(OAuth);">Logout</button>
     </div>
     <script defer>
       var OAuth = tr.net.init("O365");
