changed ghost files to bulma

--- a/src/ghost/index.hbs
+++ b/src/ghost/index.hbs
@@ -9,6 +9,24 @@
 {{/get}}
 {{/is}}
 
+<!-- header area -->
+{{#if feature_image}}
+<header class="hero is-medium is-primary is-bold " style="background: {{img_url feature_image}} center center; background-size:cover; ">
+{{else}}
+<header class="hero is-medium is-primary is-bold ">
+{{/if}}
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">{{name}}</h1>
+      {{#if description}}
+          <summary>{{description}}</summary>
+      {{else}}
+          <summary>A collection of {{plural ../pagination.total empty='posts' singular='% post' plural='% posts'}}</summary>
+      {{/if}}
+    </div>
+  </div>
+</header>
+
 {{!-- All Posts --}}
 <article>
     <h2>Neuigkeiten:</h2>
