--- a/src/ghost/partials/navigation.hbs
+++ b/src/ghost/partials/navigation.hbs
@@ -1,16 +1,27 @@
-<label for="menu_switch" class="menu fright">
-    <svg viewBox="0 0 12 32" xmlns="http://www.w3.org/2000/svg">
-        <g fill="none"  stroke-width="4" stroke-linecap="round">
-        <path  d="M 4,8 L 8,8" />
-        <path  d="M 4,16 L 8,16" />
-        <path  d="M 4,24 L 8,24" />
-        </g>
-</svg></label>
-<input type="checkbox" id="menu_switch" class="menu">
-<ul class="menu">
+<!-- Nav Logo -->
+<div class="navbar-brand">
+  <a class="navbar-item" href="{{@site.url}}" style="font-weight:bold;">
+    {{#if @site.logo}}
+        <img src="{{@site.logo}}" alt="{{@site.title}}" />
+    {{else}}
+      {{@site.title}}
+    {{/if}}
+  </a>
+  <span class="navbar-burger burger" data-target="navMenu">
+    <span></span>
+    <span></span>
+    <span></span>
+  </span>
+</div>
+
+{{!-- Nav - partials/navigation.hbs --}}
+{{#if @site.navigation}}
+<div id="navMenu" class="navbar-menu">
+  <div class="navbar-end">
     <!-- Loop through the navigation items -->
     {{#foreach navigation}}
-        <li class="nav-{{slug}}{{#if current}} nav-current{{/if}}"><a href="{{url absolute="true"}}">{{label}}</a></li>
+    <a href="{{url absolute="true"}}" class="navbar-item nav-{{slug}}{{#if current}}is-active{{/if}}">{{label}}</a>
     {{/foreach}}
-    <!-- End the loop -->
-</ul>
+  </div>
+</div>
+{{/if}}
