--- a/src/ghost/post.hbs
+++ b/src/ghost/post.hbs
@@ -2,22 +2,28 @@
 
 {{#post}}
 {{!-- Everything inside the #post tags pulls data from the post --}}
-<article>
-    <header >
-        {{#if feature_image}}
-        <img src="{{img_url feature_image}}" alt="{{title}}" />
-        {{/if}}
-            <div class="date">{{date format="MMMM D, YYYY"}}</div>
-            <h1>{{title}}</h1>
-            {{#if custom_excerpt}}
-                <h5 class="content">{{custom_excerpt}}</h5>
-            {{/if}}
+<!-- header area -->
+{{#if feature_image}}
+<header class="hero is-medium is-primary is-bold " style="background: {{img_url feature_image}} center center; background-size:cover; ">
+{{else}}
+<header class="hero is-medium is-primary is-bold ">
+{{/if}}
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">{{title}}</h1>
+      <h2 class="subtitle">{{date format="MMMM D, YYYY"}}</h2>
+      {{#if custom_excerpt}}
+          <summary>{{custom_excerpt}}</summary>
+      {{/if}}
+    </div>
+  </div>
+</header>
 
-    </header>
-
-<section class="nav-spacer">
+<article class="section">
+  <section class="content">
     {{content}}
-</section>
+  </section>
+</article>
 
 
 {{!-- Presenter mode --}}
