--- a/src/index.scss
+++ b/src/index.scss
@@ -71,6 +71,15 @@ $navbar-item-active-background-color: solid;
 @import "../node_modules/bulma/sass/layout/_all.sass";
 
 
+.card {
+  height: 100%;
+}
+
+.hero-body {
+  text-shadow: 1px 1px 2px black;
+  background-color: rgba(0,0,0,.1);
+}
+
 // // ## Color Table layout
 // $background1: #ffffff;
 // $background2: #f3f3f3;
