added impress link

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -6,7 +6,7 @@
         <a href="{{@site.url}}">{{@site.title}}</a>
     {{/if}} <br />
     Copyright © 2018-2019 Benjamin 'Benno' Falkner <br />
-    <a href="mailto:benno.falkner@gmail.com">Contact</a> | <a href="/impress/">Impressum und Haftungsausschluss</a> |<a href="https://github.com/bennof/tabularrasa">GitHub</a>
+    <a href="mailto:benno.falkner@gmail.com">Contact</a> | <a href="#impress">Impressum</a> | <a href="https://github.com/bennof/tabularrasa">GitHub</a>
   </div>
 
   {{!-- content license --}}
