Added default max width

--- a/src/ghost/author.hbs
+++ b/src/ghost/author.hbs
@@ -76,6 +76,7 @@
 {{!-- Posts --}}
 {{!-- All Posts --}}
 <article class="section">
+  <div class="container">
   <div class="columns is-multiline">
     {{#foreach posts}}
     <div class="column is-one-third">
@@ -106,6 +107,7 @@
       </div>
     </div>
     {{/foreach}}
+  </div>
   </div>
 </article>
 
