--- a/src/ghost/post.hbs
+++ b/src/ghost/post.hbs
@@ -20,7 +20,7 @@
 </header>
 
 <article class="section">
-  <section class="content">
+  <section class="container content">
     {{content}}
   </section>
 </article>
@@ -38,7 +38,7 @@
 
 <section class="section">
   {{#foreach authors}}
-  <article class="media">
+  <article class="container media">
     <figure class="media-left">
       <p class="image is-64x64">
         {{#if profile_image}}
