--- a/src/ghost/tag.hbs
+++ b/src/ghost/tag.hbs
@@ -25,6 +25,7 @@
 {{!-- Posts --}}
 {{!-- All Posts --}}
 <article class="section">
+  <div class="container">
   <div class="columns is-multiline is-mobile">
     {{#foreach posts}}
     <div class="column is-one-third">
@@ -55,6 +56,7 @@
       </div>
     </div>
     {{/foreach}}
+  </div>
   </div>
 </article>
 <article>
