--- a/src/ghost/default.hbs
+++ b/src/ghost/default.hbs
@@ -28,7 +28,7 @@
     {{{body}}}
 
     {{!-- General Footer --}}
-    <footer class="footer"> {{> footer}} </footer>
+    {{> footer}}
 
     {{!-- Theme Scripts --}}
     <script>
