--- a/src/ghost/index.hbs
+++ b/src/ghost/index.hbs
@@ -19,6 +19,7 @@
 
 {{!-- All Posts --}}
 <article class="section">
+  <div class="container">
   <div class="columns is-multiline">
     {{#foreach posts}}
     <div class="column is-one-third">
@@ -49,6 +50,7 @@
       </div>
     </div>
     {{/foreach}}
+  </div>
   </div>
 </article>
 
