--- a/src/ghost/partials/footer.hbs
+++ b/src/ghost/partials/footer.hbs
@@ -1,19 +1,23 @@
-<div class="columns is-mobile is-size-7">
-  <div class="column">
-    {{#if @site.logo}}
-        <a href="{{@site.url}}"><img src="{{@site.logo}}" alt="{{@site.title}}" style="max-height: 32px;" /></a>
-    {{else}}
-        <a href="{{@site.url}}">{{@site.title}}</a>
-    {{/if}} <br />
-    Copyright © 2018-2019 Benjamin 'Benno' Falkner <br />
-    <a href="mailto:benno.falkner@gmail.com">Contact</a> | <a href="/impress/">Impressum und Haftungsausschluss</a> |<a href="https://github.com/bennof/tabularrasa">GitHub</a>
-  </div>
+<footer class="footer">
+  <div class="container">
+  <div class="columns is-mobile is-size-7">
+    <div class="column">
+      {{#if @site.logo}}
+          <a href="{{@site.url}}"><img src="{{@site.logo}}" alt="{{@site.title}}" style="max-height: 32px;" /></a>
+      {{else}}
+          <a href="{{@site.url}}">{{@site.title}}</a>
+      {{/if}} <br />
+      Copyright © 2018-2019 Benjamin 'Benno' Falkner <br />
+      <a href="mailto:benno.falkner@gmail.com">Contact</a> | <a href="/impress/">Impressum und Haftungsausschluss</a> |<a href="https://github.com/bennof/tabularrasa">GitHub</a>
+    </div>
 
-  {{!-- content license --}}
-  <div class="column has-text-right">
-  	<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-        <img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />
-    Dieses Werk ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Namensnennung <br />
-    Weitergabe unter gleichen Bedingungen 4.0 International Lizenz</a>.
+    {{!-- content license --}}
+    <div class="column has-text-right">
+    	<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+          <img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />
+      Dieses Werk ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Namensnennung <br />
+      Weitergabe unter gleichen Bedingungen 4.0 International Lizenz</a>.
+    </div>
   </div>
-</div>
+  </div>
+</footer>
